tests: init test setup